# makememe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: demo.tape
examples/: pr-meme.yml
skill/meme/: SKILL.md
src/memecli/: SKILL.md  __init__.py  cli.py
tests/: test_cli.py
