[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "makememe"
version = "0.1.10"
description = "A tiny zero-dependency CLI for generating memes via the free memegen.link API. Agent-friendly."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Dhruv Mehra" }]
keywords = ["meme", "cli", "memegen", "agent", "claude", "codex"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/dhruvmehra/makememe"
Repository = "https://github.com/dhruvmehra/makememe"
Issues = "https://github.com/dhruvmehra/makememe/issues"
"memegen.link API" = "https://api.memegen.link"

[project.scripts]
meme = "memecli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memecli"]
